Se añade cambios pequeños al filtro

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
                     </span>
                     <select name="" id="countries" class="input">
                         <option value="ALL" selected>All countries</option>
-                        <option value="A">Argentina</option>
-                        <option value="B">Brasil</option>
-                        <option value="C">Chile</option>
-                        <option value="U">Uruguay</option>
+                        <option value="Argentina">Argentina</option>
+                        <option value="Brasil">Brasil</option>
+                        <option value="Chile">Chile</option>
+                        <option value="Uruguay">Uruguay</option>
                     </select>
                 </label>
                 <div class="date-select">
@@ -38,14 +38,14 @@
                         <span>
                             To
                         </span>
-                        <input type="date" name="" id="" class="input">
+                        <input type="date" name="" id="to" class="input">
                     </label>
                 </div>
                 <label for="" class="search-input">
                     <span>
                         Prices
                     </span>
-                    <select name="" id="" class="input">
+                    <select name="" id="prices" class="input">
                         <option value="0">All Prices</option>
                         <option value="1">$</option>
                         <option value="2">$$</option>
@@ -57,7 +57,7 @@
                     <span>
                         Bedroom Sizes
                     </span>
-                    <select name="" id="" class="input">
+                    <select name="" id="sizes" class="input">
                         <option value="A">All Sizes</option>
                         <option value="S">Small</option>
                         <option value="M">Medium</option>
