Se hace la lógica de aplicación de filtros

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                         Prices
                     </span>
                     <select name="" id="prices" class="input">
-                        <option value="0">All Prices</option>
+                        <option value="ALL">All Prices</option>
                         <option value="1">$</option>
                         <option value="2">$$</option>
                         <option value="3">$$$</option>
@@ -58,7 +58,7 @@
                         Bedroom Sizes
                     </span>
                     <select name="" id="sizes" class="input">
-                        <option value="A">All Sizes</option>
+                        <option value="ALL">All Sizes</option>
                         <option value="S">Small</option>
                         <option value="M">Medium</option>
                         <option value="L">Large</option>
@@ -70,6 +70,7 @@
     </header>
     <main>
         <section class="card-grid">
+            <h1 id="grid-message">We didn't found any hotels with those specifications, sorry</h1>
         </section>
     </main>
     <script type="module" src="./js/index.js"></script>
