--- a/src/index.html
+++ b/src/index.html
@@ -14,63 +14,75 @@
     <header>
         <div class="container">
             <h1 class="banner">Book It!</h1>
+            <h2 class="check-hotels" id="no-hotels">
+                No hotels
+            </h2>
+            <h2 class="check-hotels" id="check-hotels">
+                Check all of our&nbsp<span id="hotels-number">17</span>&nbsphotels in&nbsp<span id="hotels-location">Latin America</span>
+            </h2>
             <section class="search">
-                <label for="countries" class="search-input">
-                    <span>
-                        Where
-                    </span>
-                    <select name="" id="countries" class="input">
-                        <option value="ALL" selected>All countries</option>
-                        <option value="Argentina">Argentina</option>
-                        <option value="Brasil">Brasil</option>
-                        <option value="Chile">Chile</option>
-                        <option value="Uruguay">Uruguay</option>
-                    </select>
-                </label>
-                <div class="date-select">
-                    <label for="from" class="search-input">
+                <div class="search-container">
+                    <label for="countries" class="search-input">
                         <span>
-                            From
+                            Where
                         </span>
-                        <input type="date" name="" id="from" class="input">
+                        <select name="" id="countries" class="input">
+                            <option value="ALL" selected>All countries</option>
+                            <option value="Argentina">Argentina</option>
+                            <option value="Brasil">Brasil</option>
+                            <option value="Chile">Chile</option>
+                            <option value="Uruguay">Uruguay</option>
+                        </select>
+                    </label>
+                    <div class="date-select">
+                        <label for="from" class="search-input">
+                            <span>
+                                From
+                            </span>
+                            <input type="date" name="" id="from" class="input">
+                        </label>
+                        <label for="" class="search-input">
+                            <span>
+                                To
+                            </span>
+                            <input type="date" name="" id="to" class="input">
+                        </label>
+                    </div>
+                    <label for="" class="search-input">
+                        <span>
+                            Prices
+                        </span>
+                        <select name="" id="prices" class="input">
+                            <option value="ALL">All Prices</option>
+                            <option value="1">$</option>
+                            <option value="2">$$</option>
+                            <option value="3">$$$</option>
+                            <option value="4">$$$$</option>
+                        </select>
                     </label>
                     <label for="" class="search-input">
                         <span>
-                            To
+                            Bedroom Sizes
                         </span>
-                        <input type="date" name="" id="to" class="input">
+                        <select name="" id="sizes" class="input">
+                            <option value="ALL">All Sizes</option>
+                            <option value="S">Small</option>
+                            <option value="M">Medium</option>
+                            <option value="L">Large</option>
+                        </select>
                     </label>
+                    <button class="search-button" id="clear-button">Clear</button>
                 </div>
-                <label for="" class="search-input">
-                    <span>
-                        Prices
-                    </span>
-                    <select name="" id="prices" class="input">
-                        <option value="ALL">All Prices</option>
-                        <option value="1">$</option>
-                        <option value="2">$$</option>
-                        <option value="3">$$$</option>
-                        <option value="4">$$$$</option>
-                    </select>
-                </label>
-                <label for="" class="search-input">
-                    <span>
-                        Bedroom Sizes
-                    </span>
-                    <select name="" id="sizes" class="input">
-                        <option value="ALL">All Sizes</option>
-                        <option value="S">Small</option>
-                        <option value="M">Medium</option>
-                        <option value="L">Large</option>
-                    </select>
-                </label>
-                <button class="search-button">Clear</button>
             </section>
         </div>
     </header>
+    <h1 id="grid-message">
+        <img src="./assets/illustrations/sorry-ilustration.svg" alt="no hotels found image" srcset="">
+        We didn't found any hotels with your specifications
+        <span>Try with other filters</span>
+    </h1>
     <main>
         <section class="card-grid">
-            <h1 id="grid-message">We didn't found any hotels with those specifications, sorry</h1>
         </section>
     </main>
     <script type="module" src="./js/index.js"></script>
